applications/application1/base/httpd.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpd-sample
  namespace: application1-httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-sample
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: application1
        deploymentconfig: httpd-sample
    spec:
      containers:
        - name: httpd-sample
          image: >-
            registry.redhat.io/rhscl/httpd-24-rhel7:2.4-147
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: httpvolume
              mountPath: /opt/rh/httpd24/root/var/www/html
          resources: { }
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: { }
      schedulerName: default-scheduler
      volumes:
        - name: httpvolume
          configMap:
            name: helloocp
            defaultMode: 420
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
