applications/application1/base/httpd-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: httpd-24-rhel7
  namespace: application1-httpd
  labels:
    app: httpd-sample
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: httpd-sample
