applications/application1/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: httpd-application1
  namespace: application1-httpd
  labels:
    app: applicaton1
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: application1
